<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E1E1"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#CF2424"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:backgroundTint="@color/blue"
            android:text="@string/Play"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnLeaderboard"
            android:layout_width="150dp"
            android:layout_height="75dp"


            android:backgroundTint="@color/blue"
            android:text="@string/Leaderboard"
            android:textColor="#000000"
            android:textSize="20sp" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>